--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-iwd (0.1-1) UNRELEASED; urgency=medium
+iwd (0.1-1) unstable; urgency=medium
 
-  * Initial release
+  * Initial release (Closes: #894537)
 
- -- Andreas Henriksson <andreas@fatal.se>  Fri, 30 Mar 2018 22:33:59 +0200
+ -- Andreas Henriksson <andreas@fatal.se>  Tue, 03 Apr 2018 11:08:50 +0200
