--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+iwd (0.1-2) unstable; urgency=medium
+
+  * Fix mistakenly swapped Vcs-* field URIs.
+    Thanks to Chris Lamb for pointing it out
+  * Add missing build-dependency for systemd.pc
+  * Cherry-pick upstream commit hopefully fixing parrallel build
+
+ -- Andreas Henriksson <andreas@fatal.se>  Tue, 24 Apr 2018 09:21:43 +0200
+
 iwd (0.1-1) unstable; urgency=medium
 
   * Initial release (Closes: #894537)
