--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.1-3) unstable; urgency=medium
+
+  * Make test-suite non-fatal
+
+ -- Andreas Henriksson <andreas@fatal.se>  Tue, 24 Apr 2018 18:22:44 +0200
+
 iwd (0.1-2) unstable; urgency=medium
 
   * Fix mistakenly swapped Vcs-* field URIs.
