--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+iwd (0.2-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Bump Standards-Version to 4.1.4.
+  * Drop debian/patches, now part of upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sat, 12 May 2018 09:26:41 +0200
+
 iwd (0.1-3) unstable; urgency=medium
 
   * Make test-suite non-fatal
