--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+iwd (0.3-1) unstable; urgency=medium
+
+  * Add iwd wiki in upstream/metadata Documentation url
+  * New upstream release.
+  * Add postinst snippet to purge iwd.service state
+    - upstream changed the service from network-pre.target
+      to multi-user.target and we want to follow along.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sun, 17 Jun 2018 15:19:59 +0200
+
 iwd (0.2-1) unstable; urgency=medium
 
   * New upstream release.
