--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.6-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 10 Aug 2018 22:11:58 +0200
+
 iwd (0.5-1) unstable; urgency=medium
 
   * New upstream release.
