--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.7-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 27 Aug 2018 19:55:06 +0200
+
 iwd (0.6-1) unstable; urgency=medium
 
   * New upstream release.
