--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.7-2) unstable; urgency=medium
+
+  * Add debian/patches/disable-sae-test.patch
+
+ -- Andreas Henriksson <andreas@fatal.se>  Tue, 28 Aug 2018 21:34:59 +0200
+
 iwd (0.7-1) unstable; urgency=medium
 
   * New upstream release.
