--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-iwd (0.7-3) UNRELEASED; urgency=medium
+iwd (0.8-1) UNRELEASED; urgency=medium
 
   * Properly escape libexecdir path configure argument
+  * New upstream release.
 
  -- Andreas Henriksson <andreas@fatal.se>  Thu, 20 Sep 2018 21:14:53 +0200
 
