--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.8-2) unstable; urgency=medium
+
+  * Replace d/p/dh_private.patch with upstream version
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 21 Sep 2018 11:30:48 +0200
+
 iwd (0.8-1) unstable; urgency=medium
 
   * Properly escape libexecdir path configure argument
