--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-iwd (0.9-1) UNRELEASED; urgency=medium
+iwd (0.9-1) unstable; urgency=medium
 
   * New upstream release.
+  * Drop debian/patches/dh_private.path
+    - now included in upstream release.
+  * Bump to (experimental) debhelper compat 12
+  * Drop libexecdir configure override
 
- -- Andreas Henriksson <andreas@fatal.se>  Mon, 08 Oct 2018 16:19:51 +0200
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 08 Oct 2018 16:24:43 +0200
 
 iwd (0.8-2) unstable; urgency=medium
 
