--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.10-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sun, 21 Oct 2018 14:56:09 +0200
+
 iwd (0.9-1) unstable; urgency=medium
 
   * New upstream release.
