--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.14-2) unstable; urgency=medium
+
+  * Build against external (lib)ell (Closes: #911057)
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 18 Feb 2019 23:13:53 +0100
+
 iwd (0.14-1) unstable; urgency=medium
 
   * New upstream release.
