--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.19-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 05 Aug 2019 13:37:59 +0200
+
 iwd (0.18-1) experimental; urgency=medium
 
   * New upstream release.
