--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+iwd (0.20-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Drop cherry-picked patch now part of upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 29 Aug 2019 18:22:43 +0200
+
 iwd (0.19-2) unstable; urgency=medium
 
   * Cherry-pick patch from upstream to create storage dirs (Closes: #934194)
