--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.21-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Wed, 18 Sep 2019 10:29:11 +0200
+
 iwd (0.20-1) unstable; urgency=medium
 
   * New upstream release.
