--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (0.23-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 24 Oct 2019 09:38:10 +0200
+
 iwd (0.22-1) unstable; urgency=medium
 
   * New upstream release.
