--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (1.1-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 15 Nov 2019 22:46:26 +0100
+
 iwd (1.0-1) unstable; urgency=medium
 
   * New upstream release.
