--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (1.2-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 28 Nov 2019 10:06:15 +0100
+
 iwd (1.1-1) unstable; urgency=medium
 
   * New upstream release.
