--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+iwd (1.6-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Wed, 25 Mar 2020 14:47:53 +0100
+
 iwd (1.5-1) unstable; urgency=medium
 
   * New upstream release.
